--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "dependencies": {
     "@hotwired/stimulus": "^3.2.1",
     "@hotwired/turbo-rails": "^7.3.0",
+    "chart.js": "^4.3.3",
+    "chartkick": "^5.0.1",
     "webpack": "^5.88.2",
     "webpack-cli": "^5.1.4"
   },
