--- a/package.json
+++ b/package.json
@@ -2,12 +2,14 @@
   "name": "app",
   "private": "true",
   "dependencies": {
-    "@hotwired/stimulus": "^3.2.1",
+    "@hotwired/stimulus": "^3.2.2",
+    "@hotwired/stimulus-webpack-helpers": "^1.0.1",
     "@hotwired/turbo-rails": "^7.3.0",
     "@popperjs/core": "^2.11.8",
     "bootstrap": "^5.3.1",
     "chart.js": "^4.3.3",
     "chartkick": "^5.0.1",
+    "stimulus": "^3.2.2",
     "webpack": "^5.88.2",
     "webpack-cli": "^5.1.4"
   },
