--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "chart.js": "^4.3.3",
     "chartkick": "^5.0.1",
     "stimulus": "^3.2.2",
+    "stimulus-carousel": "^5.0.1",
+    "swiper": "8.4.5",
     "webpack": "^5.88.2",
     "webpack-cli": "^5.1.4"
   },
