checklist stuff done

--- a/config/meta.yml
+++ b/config/meta.yml
@@ -1,4 +1,4 @@
 meta_product_name: "EnDebt"
 meta_title: "EnDebt - A Simple but Intuitive Debt Management Application"
 meta_description: "EnDebt is a simple but powerful application designed to help people design and manage their debts repayment plans."
-meta_image: "endebt_logo.svg"
+meta_image: "endebt_og.png"
