--- a/config/meta.yml
+++ b/config/meta.yml
@@ -1,4 +1,4 @@
 meta_product_name: "EnDebt"
 meta_title: "EnDebt - A Simple but Intuitive Debt Management Application"
-meta_description: "EnDebt is a simple but powerful application designed to help people design and manage their debts repayment plans."
-meta_image: "endebt_og.png"
+meta_description: "EnDebt is a Simple but Powerful Application designed to help people Design and Manage their Debts Repayment Plans."
+meta_image: "https://www.endebt.credit/assets/images/endebt_og.png"
